--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,4 @@ local.properties
 .idea/appInsightsSettings.xml
 .idea/deploymentTargetSelector.xml
 .idea/deploymentTargetSelector.xml
+.idea/misc.xml
